# boo-cloud

./: CHANGELOG.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: build-bridge.yml  ci.yml  prepare-release.yml  publish-docker.yml  release.yml  test-pypi.yml
bridge/: Cargo.toml  Dockerfile  build.rs
bridge/shim/: shim.cpp
bridge/src/: agent.rs  callbacks.rs  fetch.rs  ffi.rs  handle.rs  main.rs  print_job.rs  server.rs
changes/: +add-docs.misc  +initial.feature  +mcp-server.feature  +release-commit-a.misc  +release-workflow-fix.misc  daemon-pid-file.bugfix  decouple-release-from-testpypi.bugfix  llm-integration-docs.misc  query-status-via-daemon.bugfix
docs/: bridge-migration-plan.md  cloud-print-research.md  daemon-bridge-design.md  llm-integration.md  sdk-send-message-investigation.md  signed-app-gate.md
docs/decisions/: 002-rust-bridge-replaces-cpp.md
src/boocloud/: __init__.py  auth.py  bridge.py  cli.py  credentials.py  mcp_launcher.py  mcp_server.py  ui.py
tests/: test_auth.py  test_bridge.py  test_bridge_docker.py  test_cli.py  test_credentials.py  test_mcp_server.py
