[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boocloud"]

[project]
name = "boo-cloud"
version = "0.1.0"
description = "Cloud printing for Bambu Lab printers via boocloud-bridge"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "requests>=2.28.0",
]
authors = [{ name = "estampo contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Printing",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "towncrier>=24.7.0",
]
mcp = [
    "mcp>=1.0",
    "bambox>=0.6",
]

[project.scripts]
boocloud = "boocloud.cli:main"
boocloud-mcp = "boocloud.mcp_server:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
markers = [
    "e2e: end-to-end tests (deselect with '-m not e2e')",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
disable_error_code = ["import-untyped"]

[tool.towncrier]
directory = "changes"
filename = "CHANGELOG.md"
title_format = "## {version} — {project_date}"
issue_format = "[#{issue}](https://github.com/estampo/boo-cloud/pull/{issue})"

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bugfixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "misc"
  name = "Misc"
  showcontent = true
