[package]
name = "boocloud-bridge"
version = "0.2.2"
edition = "2021"
description = "Rust bridge daemon for Bambu Lab printers via libbambu_networking.so"
license = "MIT"

[dependencies]
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tempfile = "3"
zip = "2"
roxmltree = "0.20"
tower-http = { version = "0.6", features = ["cors", "trace"] }
axum-extra = { version = "0.9", features = ["multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dirs = "6"
uuid = { version = "1", features = ["v5"] }
hostname = "0.4"

[build-dependencies]
cc = "1"

[dev-dependencies]
axum-test = "16"
